export const APP_INFO_CONSTANTS = {
  title: 'Life Pickr',
  subtitle: '당신의 라이프스타일을 선택하세요',
};